Global font fix, readability colors

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,3 +1,7 @@
 body {
   background-color: #1b1b1b;
+  font-weight: bold;
+  font-family: 'Avenir Next Condensed', sans-serif;
+  font-style: italic;
 }
+
